--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2986,12 +2986,13 @@ section {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #ffc800;
+  /* background-color: #ffc800; */ 
+  background-color: var(--color-nav-dropdown-hover);
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
   line-height: 14px;
-  margin-top: 12px;
+  margin-top: 12px; 
 }
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
