--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3095,5 +3095,82 @@ section {
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
+  } 
+
+  .timeline img{
+    width: 100%; 
+    height: 100%;
   }
-}
+} 
+
+
+/* Newsletters */ 
+
+.subscribe-area {
+  background-image: linear-gradient(to top, #ddd 0%, #fff 100%);
+  }
+  
+  .pb-50 {
+      padding-bottom: 50px;
+  }
+  .pt-70 {
+      padding-top: 70px;
+  }
+  
+  .mb-15 {
+      margin-bottom: 15px;
+  }
+  
+  .subscribe-text span {
+      font-size: 12px;
+      font-weight: 700;
+      color: #fff;
+      letter-spacing: 5px;
+  }
+  .subscribe-text h2 {
+      color: #fff;
+      font-size: 36px;
+      font-weight: 300;
+      margin-bottom: 0;
+      margin-top: 6px;
+  }
+  .subscribe-wrapper {
+      overflow: hidden;
+  }
+  .mb-15 {
+      margin-bottom: 15px;
+  }
+  .subscribe-form {
+  }
+  .subscribe2-wrapper .subscribe-form input {
+      background: #fff;
+      border: 1px solid var(--color-nav-dropdown-hover);
+      border-radius: 30px;
+      color: #000;
+      display: inline-block;
+      font-size: 15px;
+      font-weight: 300;
+      height: 57px;
+      margin-right: 17px;
+      padding-left: 35px;
+      width: 70%;
+      cursor: pointer;
+  }
+   
+  .subscribe2-wrapper .subscribe-form button {
+      background: #ddd;
+      border: none;
+      border-radius: 30px;
+      color: #121417;
+      display: inline-block;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1;
+      padding: 18px 46px;
+      transition: all 0.3s ease 0s;
+  }
+  .subscribe2-wrapper .subscribe-form button i {
+      font-size: 18px;
+      padding-left: 5px;
+  }
+  
