--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3174,3 +3174,112 @@ section {
       padding-left: 5px;
   }
   
+
+  /* Marketplace Card session */ 
+
+  .marketplace .cards{
+    width: 300px;
+    height: 250px; 
+    position: relative;
+    transform-style: preserve-3d;
+    transition: 1s; 
+    margin: 20px;
+  } 
+
+
+  .marketplace .card-img{
+    position: relative; 
+    width: 100%;
+    height: 100%;  
+    background-image: url(https://images.unsplash.com/photo-1532079563951-0c8a7dacddb3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);
+    /* background: var(--color-nav-dropdown); */
+    /* background: url("./assets/img/about/value1.jpg");  */
+    background-size: cover; 
+    border-radius: 20px; 
+    transform: translateZ(40px);
+  }
+
+
+  .marketplace .card-body{
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate3d(-50%, -50%, -40px) rotateY(180deg); 
+    width: 85%;
+    height: 87%; 
+    border-radius: 20px; 
+    overflow: hidden; 
+    border: 5px solid #ddd;
+  } 
+
+
+  .marketplace .cards:hover{
+    transform: rotateY(180deg);
+  } 
+  .marketplace .cards .bg{
+    position: absolute; 
+    background: #fff; 
+    border-radius: 100px; 
+    width: 0%;
+    transition: .5s;
+  }
+
+  .marketplace .cards .bg:nth-child(1){
+    height: 50%; 
+    transform-origin: left; 
+    top: 0%; 
+    left: -30%; 
+    transform: rotate(-10deg);
+  } 
+
+  .marketplace .cards .bg:nth-child(2){
+    height: 50%; 
+    transform-origin: right; 
+    top: 5%; 
+    right: -30%; 
+    transform: rotate(-10deg);
+  } 
+
+
+  .marketplace .cards .bg:nth-child(3){
+    height: 50%; 
+    transform-origin: left; 
+    top: 85%; 
+    left: -30%; 
+    transform: rotate(-10deg);
+  } 
+
+  
+  .marketplace .cards:hover  .card-body .bg{
+    width: 200%; 
+    transition-delay: .5s;
+  }
+
+  .marketplace .cards:hover .card-body .bg:nth-child(2){
+    transition-delay: 1s;
+  } 
+
+  .marketplace .cards:hover .card-body .bg:nth-child(3){
+    transition-delay: 1.5s;
+  } 
+
+  .marketplace .content {
+    position: relative; 
+    transition: .5s; 
+    padding: 40px 10px; 
+    text-align: center;
+  } 
+  
+  
+  .marketplace .title{
+    font-size: 30px; 
+    margin-bottom: 20px; 
+    color: var(--color-nav-hover); 
+    text-transform: uppercase;
+   }
+
+
+
+
+
+  
