--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -237,6 +237,7 @@ section {
   --color-secondary: #444444;
   --color-nav: #444444;
   --color-nav-hover: #e84545;
+  position: fixed;
   box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -311,11 +312,17 @@ section {
     color: var(--color-nav-hover);
   }
 
+  .navmenu .dropdown{
+    position: relative;
+
+    width: 100%;
+
+  }
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
     background: var(--color-nav-dropdown-background);
-    display: block;
+    /* display: block; */
     position: absolute;
     visibility: hidden;
     left: 14px;
@@ -324,6 +331,7 @@ section {
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
+
   }
 
   .navmenu .dropdown ul li {
@@ -353,9 +361,10 @@ section {
     visibility: visible;
   }
 
-  .navmenu .dropdown .dropdown ul {
+  .navmenu  .dropdown ul {
     top: 0;
     left: -90%;
+     
     visibility: hidden;
   }
 
@@ -367,7 +376,21 @@ section {
   }
 
   .navmenu .megamenu {
-    position: static;
+    position: absolute;
+	top: 85px;
+	width: 100%;
+	left: 0;
+	padding: 0 30px;
+	opacity: 0;
+	visibility: hidden;
+  }
+
+  .navmenu .megamenu .content{
+    background: #242526;
+	padding: 25px 20px;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
   }
 
   .navmenu .megamenu ul {
@@ -382,7 +405,6 @@ section {
     right: 0;
     visibility: hidden;
     opacity: 0;
-    display: flex;
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
@@ -505,7 +527,7 @@ section {
     transition: all 0.5s ease-in-out;
   }
 
-  .navmenu .dropdown ul ul,
+  .navmenu .dropdown   ul ul,
   .navmenu .megamenu ul ul {
     background-color: rgba(33, 37, 41, 0.1);
   }
@@ -2909,29 +2931,29 @@ section {
 .blog-details .comments .reply-form .btn-primary:hover {
   color: var(--color-inverse);
   background-color: rgba(var(--color-primary-rgb), 0.8);
-} 
+}
 
-/* Newsletter */   
+/* Newsletter */
 
 /* .newsletter .form-group{
-  padding: 10px; 
-  border-radius: 5px; 
-  background: #fff; 
+  padding: 10px;
+  border-radius: 5px;
+  background: #fff;
   box-shadow: 1px 1px 5px #32353a, -5px -5px 10px #fff;
 }  */
 
-/* about */ 
+/* about */
 
 .timeline {
   position: relative;
   padding: 0;
   list-style: none;
-} 
+}
 
 .timeline .priority{
-  font-weight: bold; 
-  font-style: italic; 
-  font-size: 10px; 
+  font-weight: bold;
+  font-style: italic;
+  font-size: 10px;
   color: #6c757d;
 }
 .timeline:before {
@@ -2986,13 +3008,13 @@ section {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  /* background-color: #ffc800; */ 
+  /* background-color: #ffc800; */
   background-color: var(--color-nav-dropdown-hover);
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
   line-height: 14px;
-  margin-top: 12px; 
+  margin-top: 12px;
 }
 .timeline > li.timeline-inverted > .timeline-panel {
   float: right;
@@ -3095,32 +3117,32 @@ section {
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
-  } 
+  }
 
   .timeline img{
-    width: 100%; 
+    width: 100%;
     height: 100%;
   }
-} 
+}
 
 
-/* Newsletters */ 
+/* Newsletters */
 
 .subscribe-area {
   background-image: linear-gradient(to top, #ddd 0%, #fff 100%);
   }
-  
+
   .pb-50 {
       padding-bottom: 50px;
   }
   .pt-70 {
       padding-top: 70px;
   }
-  
+
   .mb-15 {
       margin-bottom: 15px;
   }
-  
+
   .subscribe-text span {
       font-size: 12px;
       font-weight: 700;
@@ -3156,7 +3178,7 @@ section {
       width: 70%;
       cursor: pointer;
   }
-   
+
   .subscribe2-wrapper .subscribe-form button {
       background: #ddd;
       border: none;
@@ -3173,110 +3195,110 @@ section {
       font-size: 18px;
       padding-left: 5px;
   }
-  
 
-  /* Marketplace Card session */ 
+
+  /* Marketplace Card session */
 
   .marketplace .cards{
     width: 300px;
-    height: 250px; 
+    height: 250px;
     position: relative;
     transform-style: preserve-3d;
-    transition: 1s; 
+    transition: 1s;
     margin: 20px;
-  } 
+  }
 
 
   .marketplace .card-img{
-    position: relative; 
+    position: relative;
     width: 100%;
-    height: 100%;  
+    height: 100%;
     background-image: url(https://images.unsplash.com/photo-1532079563951-0c8a7dacddb3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80);
     /* background: var(--color-nav-dropdown); */
     /* background: url("./assets/img/about/value1.jpg");  */
-    background-size: cover; 
-    border-radius: 20px; 
+    background-size: cover;
+    border-radius: 20px;
     transform: translateZ(40px);
   }
 
 
   .marketplace .card-body{
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate3d(-50%, -50%, -40px) rotateY(180deg); 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, -40px) rotateY(180deg);
     width: 85%;
-    height: 87%; 
-    border-radius: 20px; 
-    overflow: hidden; 
+    height: 87%;
+    border-radius: 20px;
+    overflow: hidden;
     border: 5px solid #ddd;
-  } 
+  }
 
 
   .marketplace .cards:hover{
     transform: rotateY(180deg);
-  } 
+  }
   .marketplace .cards .bg{
-    position: absolute; 
-    background: #fff; 
-    border-radius: 100px; 
+    position: absolute;
+    background: #fff;
+    border-radius: 100px;
     width: 0%;
     transition: .5s;
   }
 
   .marketplace .cards .bg:nth-child(1){
-    height: 50%; 
-    transform-origin: left; 
-    top: 0%; 
-    left: -30%; 
+    height: 50%;
+    transform-origin: left;
+    top: 0%;
+    left: -30%;
     transform: rotate(-10deg);
-  } 
+  }
 
   .marketplace .cards .bg:nth-child(2){
-    height: 50%; 
-    transform-origin: right; 
-    top: 5%; 
-    right: -30%; 
+    height: 50%;
+    transform-origin: right;
+    top: 5%;
+    right: -30%;
     transform: rotate(-10deg);
-  } 
+  }
 
 
   .marketplace .cards .bg:nth-child(3){
-    height: 50%; 
-    transform-origin: left; 
-    top: 85%; 
-    left: -30%; 
+    height: 50%;
+    transform-origin: left;
+    top: 85%;
+    left: -30%;
     transform: rotate(-10deg);
-  } 
+  }
 
-  
+
   .marketplace .cards:hover  .card-body .bg{
-    width: 200%; 
+    width: 200%;
     transition-delay: .5s;
   }
 
   .marketplace .cards:hover .card-body .bg:nth-child(2){
     transition-delay: 1s;
-  } 
+  }
 
   .marketplace .cards:hover .card-body .bg:nth-child(3){
     transition-delay: 1.5s;
-  } 
+  }
 
   .marketplace .content {
-    position: relative; 
-    transition: .5s; 
-    padding: 40px 10px; 
+    position: relative;
+    transition: .5s;
+    padding: 40px 10px;
     text-align: center;
-  } 
-  
-  
+  }
+
+
   .marketplace .title{
-    font-size: 30px; 
-    margin-bottom: 20px; 
-    color: var(--color-nav-hover); 
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: var(--color-nav-hover);
     text-transform: uppercase;
-   } 
+   }
 
 
    /* membership section */
@@ -3287,10 +3309,10 @@ section {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-  } 
+  }
 
 
-  
+
 .about-image {
   border-radius: 30px;
   display: block;
@@ -3298,7 +3320,7 @@ section {
 
 .about-text-wrap {
   position: relative;
-} 
+}
 
 .about-text-icon {
   background: var(--primary-color);
@@ -3348,7 +3370,7 @@ section {
   left: 0;
   margin: 20px;
   padding: 35px;
-} 
+}
 
 .custom-btn {
   background: var(--color-primary);
@@ -3369,22 +3391,22 @@ section {
 
 
 
-/* digital description of marketplace page */ 
+/* digital description of marketplace page */
 
 
 .features .digital{
-  background: var(--color-nav-dropdown); 
-  border-radius: 20px; 
-  padding: 10px; 
+  background: var(--color-nav-dropdown);
+  border-radius: 20px;
+  padding: 10px;
   color: #fff;
-}  
+}
 
 .features h4{
-  font-weight: bold; 
-  color: var(--color-primary); 
-  text-transform: capitalize; 
+  font-weight: bold;
+  color: var(--color-primary);
+  text-transform: capitalize;
   font-size: 20px;
 }
 
 
-  
+
