--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3162,8 +3162,7 @@ section {
   .mb-15 {
       margin-bottom: 15px;
   }
-  .subscribe-form {
-  }
+
   .subscribe2-wrapper .subscribe-form input {
       background: #fff;
       border: 1px solid var(--color-nav-dropdown-hover);
@@ -3409,4 +3408,125 @@ section {
 }
 
 
+/* Contact Page Contact-form */
 
+
+#contact-form{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #contact-form .item{
+    width: 100%;
+    height: 550px;
+    max-width: 820px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 0 20px 10px rgba(238, 237, 237, 0.795);
+    overflow: hidden;
+    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    z-index: 1000;
+  }
+
+  #contact-form .contact{
+    background: #504f4f;
+    justify-content: center;
+    align-items: center
+  }
+
+  #contact-form .submit-form{
+    background: rgb(235, 232, 232)(184, 178, 178)(184, 178, 178)(184, 178, 178)(124, 120, 120);
+
+  }
+
+  #contact-form .first-text{
+    color: white;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: 35px;
+  }
+  #contact-form .img{
+    height: 320px;
+    width: 320px;
+    margin: auto;
+  }
+
+  #contact-form .social-media{
+    display:flex;
+    list-style: none;
+  }
+  #contact-form .social-media i{
+    visibility: hidden;
+    background: white;
+    padding: 5px;
+  }
+
+  #contact-form .third-text{
+    font-size: 25px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    padding-top: 10px;
+
+  }
+
+  #contact-form form{
+    padding: 0 50px ;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  }
+  #contact-form .input-box{
+    height: 40px;
+    width: 70%;
+    margin: 30px 0;
+    position: relative;
+  }
+
+  #contact-form form input, #contact-form form .input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: solid 2px rgb(146, 144, 144);
+    border-radius: 20px;
+    outline: none;
+    padding-left: 10px;
+    color: black;
+    font-size: 16px;
+  }
+
+  #contact-form .input-box label{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    font-size: 15px;
+    font-weight: 500;
+    color: black;
+    transition: .5s;
+  }
+
+  #contact-form .input-box input:focus ~ label,
+  #contact-form .input-box input:valid ~ label,
+  #contact-form .input-box .input:focus ~ label,
+  #contact-form .input-box .input:valid ~ label{
+    top: -1px;
+    left: 10px;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 5px;
+    background: #fff;
+  }
+
+  #contact-form .input-box input:valid,
+  #contact-form .input-box input:focus{
+  
+
+    border: 1px solid var(--color-nav-hover);
+  }
