--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -93,7 +93,7 @@
   .timeline .timeline-body > p {
     margin-bottom: 0;
   }
-  
+
   @media (min-width: 768px) {
     .timeline:before {
       left: 50%;
@@ -164,4 +164,21 @@
     .timeline > li.timeline-inverted > .timeline-panel {
       padding: 0 100px 20px 20px;
     }
+  }
+
+  /* Contact page */
+
+  #contact-form{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #8f50ec;
+  } 
+
+  #contact-form .item{
+    width: 100%;
+    height: 550px;
+    max-width: 820px;
+    background: #fff;
+    border-radius: 20px;
   }
