--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3423,21 +3423,22 @@ section {
 
   #contact-form .item{
     width: 100%;
-    height: 550px;
+    height: 600px;
     max-width: 820px;
+    padding: auto;
     background: #fff;
     border-radius: 20px;
     box-shadow: 0 0 20px 10px rgba(238, 237, 237, 0.795);
     overflow: hidden;
     grid-template-columns: repeat(2, 1fr);
     display: grid;
-    z-index: 1000;
+    z-index: 500;
   }
 
   #contact-form .contact{
-    background: #504f4f;
-    justify-content: center;
-    align-items: center
+    background: #e4e1e1ae;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   #contact-form .submit-form{
@@ -3446,10 +3447,14 @@ section {
   }
 
   #contact-form .first-text{
-    color: white;
+    color: var(--color-primary);
     padding-left: 20px;
     padding-top: 20px;
-    font-size: 35px;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    margin: 0 50px;
+    margin-bottom: 30px;
   }
   #contact-form .img{
     height: 320px;
@@ -3468,11 +3473,16 @@ section {
   }
 
   #contact-form .third-text{
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: 500;
     position: relative;
+    margin: 0 50px;
+    text-align: center;
+    margin-bottom: 30px;
     top: 20px;
     left: 20px;
     padding-top: 10px;
+
 
   }
 
@@ -3484,12 +3494,17 @@ section {
   }
   #contact-form .input-box{
     height: 40px;
-    width: 70%;
+    width: 100%;
+    margin: 30px 0;
+    position: relative;
+  }#contact-form .input-box-message{
+    height: auto;
+    width: 100%;
     margin: 30px 0;
     position: relative;
   }
 
-  #contact-form form input, #contact-form form .input{
+  #contact-form form input, #contact-form form .input, #contact-form .message{
     width: 100%;
     height: 100%;
     background: transparent;
@@ -3501,7 +3516,8 @@ section {
     font-size: 16px;
   }
 
-  #contact-form .input-box label{
+
+  #contact-form  label{
     position: absolute;
     top: 50%;
     left: 10px;
@@ -3515,18 +3531,161 @@ section {
   #contact-form .input-box input:focus ~ label,
   #contact-form .input-box input:valid ~ label,
   #contact-form .input-box .input:focus ~ label,
-  #contact-form .input-box .input:valid ~ label{
+  #contact-form .input-box .input:valid ~ label,
+  #contact-form .input-box-message .message:focus ~ label,
+  #contact-form .input-box-message .message:valid ~ label{
     top: -1px;
     left: 10px;
     font-size: 12px;
     font-weight: 500;
-    padding: 5px;
+    padding: 1px 5px;
     background: #fff;
   }
 
-  #contact-form .input-box input:valid,
-  #contact-form .input-box input:focus{
-  
 
+
+
+  #contact-form .input-box input:hover,
+  #contact-form .input-box input:focus{
     border: 1px solid var(--color-nav-hover);
   }
+
+  #contact-form .btn{
+    width: 60%;
+    padding: 0 10px;
+    margin: 0px 20%;
+    border: none;
+    background: #df1529;
+    font-size: 20px;
+    font-weight: 400;
+    color: whitesmoke;
+    transition:ease 0.3s;
+  }
+
+  #contact-form .btn:hover{
+    background-color: var(--color-nav-dropdown-hover);
+    font-weight: 700;
+    font-size: 15px;
+    color: white;
+    border: solid black 2px;
+  }
+
+  /* contact slider */
+
+  #contact-form .slider-container{
+    position: relative;
+    width: auto;
+    height: 350px;
+    margin: 20px auto;
+    padding: 1px;
+    /* border: 3px solid black; */
+    box-shadow: 0 0 8px 2px rgba(137, 136, 136, 0.2);
+    background: #3a3939;
+  }
+
+  #contact-form .slides{
+    width: 100%;
+    height: calc(100% - 40px);
+    position: relative;
+    overflow: hidden;
+  }
+
+  #contact-form .slides img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+  }
+
+  #contact-form .slides img:not(.active){
+    top: 0;
+    left: -100%;
+  }
+
+  #contact-form span.next,#contact-form span.prev{
+    position: absolute;
+    top: 50%;
+    padding: 15px;
+    transform: translateY(-50%);
+    color: var(--color-nav-hover);
+    font-size: 25px;
+    font-weight: bold;
+    transition: 0.5s;
+    border-radius: 3px;
+    user-select: none;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  #contact-form span.next{
+    right: 20px;
+  }
+  #contact-form span.prev{
+    left: 20px;
+  }
+
+  #contact-form span.prev:hover, #contact-form span.next:hover{
+    background: var(--color-primary);
+    opacity: 0.8;
+    color: var(--color-box-background);
+  }
+  #contact-form .dotsContainer{
+    position: absolute;
+    bottom: 5px;
+    z-index: 3;
+    left: 50%;
+    transform: translateX(-50%)
+  }
+
+  #contact-form .dotsContainer .dot{
+    width: 15px;
+    height: 15px;
+    margin: 0 2px;
+    border: solid 3px #ddd;
+    border-radius: 50%;
+    transition: black 0.6s ease;
+    display: inline-block;
+  }
+
+  #contact-form .dotsContainer .active{
+    background-color:var(--color-nav-dropdown-hover);
+  }
+
+  @keyframes next1{
+    from{
+        left: 0%;
+    }
+    to{
+        left: -100%;
+    }
+  }
+
+  @keyframes next2{
+    from{
+        left: 100%;
+    }
+    to{
+        left: 0%;
+    }
+  }
+
+
+
+  @keyframes prev1{
+    from{
+        left: 0%;
+    }
+    to{
+        left: 100%;
+    }
+  }
+
+  @keyframes prev2{
+    from{
+        left: -100%;
+    }
+    to{
+        left: 0%;
+    }
+  }
+
